Registration steps 2 and 3

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -482,6 +482,9 @@ li.or {
   padding-left:0;
   padding-right:0;
 }
+.validate-by-link.active {
+  border-color: #0088cc;
+}
 /*========== Page stuff ==========*/
 
 #sign-up-call-to-action .well {
