--- a/app/views/registrations/steps/_who_you_are.html.haml
+++ b/app/views/registrations/steps/_who_you_are.html.haml
@@ -1,5 +1,5 @@
+=form.hidden_field :current_step, :value => "who_you_are"
 =form.inputs(:class => "form-horizontal") do
-  =form.input :current_step, :as => :hidden, :value => "who_you_are"
   =form.input :first_name, :required => false, :input_html => {:placeholder => "e.g. John"}
   =form.input :last_name, :required => false, :input_html => {:placeholder => "e.g. Smith"}
   .control-group
