--- a/app/views/modals/_register_popup.html.haml
+++ b/app/views/modals/_register_popup.html.haml
@@ -10,6 +10,6 @@
       Already registered? 
       =link_to "Log in here.", "/login"
   .modal-footer
-    =link_to "Register", "/wireframes/register_help_1", :class=>"btn btn-primary", :data_dismiss=>"modal"
+    =link_to "Register", new_registration_path, :class=>"btn btn-primary", :data_dismiss=>"modal"
     =link_to "Close", "#", :class=>"btn", :"data-dismiss"=>"modal"      
     =#link_to "Login", "/wireframes/register_help_1", :class=>"btn btn-success", :data_dismiss=>"modal"
