--- a/app/views/registrations/new.html.haml
+++ b/app/views/registrations/new.html.haml
@@ -8,14 +8,14 @@
         %br
         who you are
     =li_with_active(@user.current_step == "where_you_live") do
-      =link_to "/wireframes/register_help_2" do
+      =link_to "#" do
         %span.tab-number
           2    
         Tell us
         %br
         where you live  
     =li_with_active(@user.current_step == "validate") do
-      =link_to "/wireframes/register_help_3" do
+      =link_to "#" do
         %span.tab-number
           3
         Validate 
