--- a/app/views/needs/_form.html.haml
+++ b/app/views/needs/_form.html.haml
@@ -1,6 +1,7 @@
-=semantic_form_for @need do |f|
-  =f.inputs do
-    =f.input :title
-    =f.input :description
-    =f.input :deadline, :as => :string
-  =f.buttons
+.well
+  =semantic_form_for @need, :html => { :class => "form-horizontal" }  do |f|
+    =f.inputs do
+      =f.input :title, :label => "I need help with",  :input_html => { :class => "span5" }, :required => false 
+      =f.input :description, :label => "Add a description",  :input_html => { :class => "span5", :rows => "6" }, :required => false
+      =f.input :deadline, :as => :string, :label => "I need to know by" 
+    =f.buttons
