--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -360,6 +360,9 @@ br.clear {
   border-color: #67c621;
 	
 }
+body#home.logged_in .call-to-action {
+  margin-top: 0;
+}
 
 /*========== I can help/need help pages ==========*/
 
