--- a/app/views/needs/_form.html.haml
+++ b/app/views/needs/_form.html.haml
@@ -3,5 +3,8 @@
     =f.inputs do
       =f.input :title, :label => "I need help with",  :input_html => { :class => "span5" }, :required => false 
       =f.input :description, :label => "Add a description",  :input_html => { :class => "span5", :rows => "6" }, :required => false
-      =f.input :deadline, :as => :string, :label => "I need to know by" 
+      .control-group
+        %label.control-label I need to know by
+        .controls
+          =f.date_select :deadline, {:order => [:day, :month, :year], :prompt => true, :start_year => (Time.now.year), :end_year => (Time.now.year + 1)}, :class => "input-small"
     =f.buttons
