Redirect to registration after creating a need when logged out.

--- a/app/views/home/logged_out_index.html.haml
+++ b/app/views/home/logged_out_index.html.haml
@@ -57,7 +57,7 @@
             Lorem ipsum falli molestiae cu mei, choro facete consequat ex mei. Eum idque dicant offendit in.                                       
 
             
-    =link_to "Add a request for help", "/wireframes/i_need_help", :class=>"btn call-to-action primary"
+    =link_to "Add a request for help", new_need_path, :class=>"btn call-to-action primary"
                                          
         
   .span6
