--- a/app/views/needs/_form.html.haml
+++ b/app/views/needs/_form.html.haml
@@ -1,5 +1,13 @@
+-if logged_out?
+  -content_for(:head) do
+    :javascript
+      $(document).ready(function() {
+        NewNeedForm.init();
+      });
+
 .well
-  =semantic_form_for @need, :html => { :class => "form-horizontal" }  do |f|
+  =semantic_form_for @need, :validate => true, :html => { :class => "form-horizontal" }  do |f|
+    =hidden_field_tag :return_to
     =f.inputs do
       =f.input :title, :label => "I need help with",  :input_html => { :class => "span5" }, :required => false 
       =f.input :description, :label => "Add a description",  :input_html => { :class => "span5", :rows => "6" }, :required => false
