--- a/app/views/needs/index.html.haml
+++ b/app/views/needs/index.html.haml
@@ -4,7 +4,7 @@
     %h1=title "#{ @user ? 'My' : 'All' } requests"
     
     %ul.nav.nav-tabs.nav-stacked
-      -@needs.each do |need|
+      -@needs.order('created_at DESC').each do |need|
         %li
           =link_to need do
             .list-image
