--- a/app/views/home/logged_out_index.html.haml
+++ b/app/views/home/logged_out_index.html.haml
@@ -11,51 +11,18 @@
   .span6
     %h2 Looking for help?
     %ul.help-list.unstyled
-      %li.list
-        .list-image
-          =link_to "#" do
-            =image_tag "person.png"
-            %p.small-text
-              Alan
-        .list-text
-          %h3
-            =link_to "Taking cat to the vet", "#register-popup", :"data-toggle"=>"modal"
-          %p
-            Lorem ipsum falli molestiae cu mei, choro facete consequat ex mei. Eum idque dicant offendit in.   
-      %li.list
-        .list-image
-          =link_to "#" do
-            =image_tag "person.png"
-            %p.small-text
-              Alan
-        .list-text
-          %h3
-            =link_to "My computer", "#register-popup", :"data-toggle"=>"modal"
-          %p
-            Lorem ipsum falli molestiae cu mei, choro facete consequat ex mei. Eum idque dicant offendit in.   
-      %li.list
-        .list-image
-          =link_to "#" do
-            =image_tag "person.png"
-            %p.small-text
-              Alan
-        .list-text
-          %h3
-            =link_to "The school run", "#register-popup", :"data-toggle"=>"modal"
-          %p
-            Lorem ipsum falli molestiae cu mei, choro facete consequat ex mei. Eum idque dicant offendit in.   
-      %li.list
-        .list-image
-          =link_to "#" do
-            =image_tag "person.png"
-            %p.small-text
-              Alan
-        .list-text
-          %h3
-            =link_to "Decorating", "#register-popup", :"data-toggle"=>"modal"
-          %p
-            Lorem ipsum falli molestiae cu mei, choro facete consequat ex mei. Eum idque dicant offendit in.                                       
-
+      -@needs.each do |need|
+        %li.list
+          .list-image
+            =link_to "#" do
+              =image_for(need.user, "60x50#")
+              %p.small-text
+                =need.user
+          .list-text
+            %h3
+              =link_to need.title, "#register-popup", :"data-toggle"=>"modal"
+            %p
+              =need.description
             
     =link_to "Add a request for help", new_need_path, :class=>"btn call-to-action primary"
                                          
