--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -576,9 +576,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', end
 	padding: 10px 15px 10px;
 	-webkit-box-shadow:0px 0px 4px rgba(0,0,0,0.2)
 }
+.post-speech {
+  min-height: 38px;
+}
 .post-action {
   float: right;
   font-size: 13px;
+  margin-left: 10px;
 }
 
 .request-body {
