--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,10 +11,11 @@
     =google_analytics_js
   -body_tag do  
     .main-wrapper
-      #hellobar
-        %h3
-          New to this site?
-          =link_to "Find out how it works", "/wireframes/about"
+      -if current_page?(root_path) && !current_user
+        #hellobar
+          %h3
+            New to this site?
+            =link_to "Find out how it works", "/wireframes/about"
       -if flash.present?
         =yield_with_bootstrap(render_flash)
       =render("layouts/header")
