Add 'optional' to deadline on need form

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -148,6 +148,9 @@ textarea {
 label {
   font-weight: bold;
 }
+label em.optional {
+  font-weight:normal;
+}
 .form-horizontal .control-group {
 	margin-bottom: 30px;
 }
