--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -323,6 +323,8 @@ br.clear {
   padding-bottom: 10px;
   padding-top: 10px;  
   float: left;
+  height: 82px;
+  overflow: hidden;
   width: 100%;
   border-bottom: 1px solid #ccc;
 }
@@ -365,6 +367,13 @@ br.clear {
 }
 body#home.logged_in .call-to-action {
   margin-top: 0;
+}
+
+/*========== Logged out home ==========*/
+
+body#home.logged_out .help-list{
+  float:left;
+  height:412px;
 }
 
 /*========== I can help/need help pages ==========*/
