Show flash below header

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -19,7 +19,7 @@
     .row
       #control-panel.span12
         .row
-          .span2
+          .span2.offset1
             =link_to root_path, :id=>"big-home-icon" do
               %i.icon-home
           .span3    
