--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -289,6 +289,11 @@ br.clear {
   color: #00558D;
 }
 
+/*========== Flash ==========*/
+
+.flash_container {
+  margin-top:-25px;
+}
 
 /*========== Homepage ==========*/
 
@@ -544,7 +549,7 @@ html, body {
   height: 70px;
   border-bottom: 1px solid #ccc;
   margin-bottom: 40px;
-  padding: 20px;
+  padding: 20px 0px;
   background: #f5f5f5;
 }
 #big-home-icon, #big-home-icon i {
