--- a/app/views/needs/show.html.haml
+++ b/app/views/needs/show.html.haml
@@ -1,11 +1,8 @@
 .row
-  .span10.offset2
-    %ul.pager.mb-2
-      %li
-        -if @need.user == current_user
-          =link_to "&uarr; My requests".html_safe, user_needs_path(current_user)
-        -else
-          =link_to "&uarr; All requests".html_safe,  needs_path
+  -if @need.user != current_user
+    .span12
+      %ul.pager.mb-2
+        %li=link_to "&uarr; All requests".html_safe,  needs_path
   .span2
     =link_to @need.user, :class => "user-thumbnail-large" do
       =image_for(@need.user, "120x120#")
