--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -339,7 +339,7 @@ br.clear {
 }
 .list-image {
   margin-right: 20px;
-  	float: left;
+	float: left;
 	width: 60px;
 }
 .list-image img {
@@ -589,7 +589,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', end
 
   
 }
-.post {
+li.post {
 	background: #fff;
 	float: left;
 	border-radius:5px;
@@ -598,10 +598,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', end
 	padding: 10px 15px 10px;
 	-webkit-box-shadow:0px 0px 4px rgba(0,0,0,0.2)
 }
-.post-speech {
+li.post .post-speech {
   min-height: 38px;
 }
-.post-action {
+li.post .post-action {
   float: right;
   font-size: 13px;
   margin-left: 10px;
