--- a/app/views/registrations/steps/_validate.html.haml
+++ b/app/views/registrations/steps/_validate.html.haml
@@ -13,26 +13,29 @@
     Quisque commodo hendrerit lorem quis egestas. Maecenas quis tortor arcu. Vivamus rutrum nunc non neque consectetur quis placerat neque lobortis. Nam vestibulum, arcu sodales feugiat consectetur, nisl orci bibendum elit, eu euismod magna sapien ut nibh.
 .validate-your-account
   %h2.mb2.mt2
-    Validate your account by...
+    Validate your account
   -if @user.errors[:validate_by].present?
     .control-group.error.mb-2
       %p.help-inline
         Please click on one of the options below    
   %ul.thumbnails
-    %li.span4
+    %li
       =link_to "#", :class => "thumbnail validate-by-link", :data => {:"validate-by" => "credit_card"} do
-        =image_tag "http://placehold.it/300x160"
-        .caption
-          %h3 Credit card
-          %p
-            Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+        %i.icon-credit-card
+        %h3 With a credit card
+        %p
+          Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
 
-    %li.or
-      %h3 or
-    %li.span4
+    %li
       =link_to "#", :class => "thumbnail validate-by-link", :data => {:"validate-by" => "post"} do
-        =image_tag "http://placehold.it/300x160"
-        .caption
-          %h3 By post
-          %p
-            Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+        %i.icon-envelope
+        %h3 By post
+        %p
+          Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+    %li
+      =link_to "#", :class => "thumbnail validate-by-link", :data => {:"validate-by" => "organisation"} do
+        %i.icon-group
+        %h3 With an organisation
+        %p
+          Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+    
