--- a/app/views/needs/_form.html.haml
+++ b/app/views/needs/_form.html.haml
@@ -22,4 +22,4 @@
               =@need.errors[:deadline].to_sentence
     .row
       .span2.offset5
-        =f.commit_button "Add request", :button_html => { :class => "btn-primary pull-right" } 
+        =f.commit_button "Send", :button_html => { :class => "btn-primary pull-right" } 
