--- a/app/views/needs/new.html.haml
+++ b/app/views/needs/new.html.haml
@@ -1,3 +1,5 @@
 .help-box.span8.offset2
   %h2=title 'Add a request for help'
+  %p
+    Please tell us what you would like help with and then press 'Send'.
   =render('form')
