--- a/app/views/registrations/steps/_who_you_are.html.haml
+++ b/app/views/registrations/steps/_who_you_are.html.haml
@@ -1,3 +1,5 @@
+%p.mb-3
+  First, please let us who you are.
 =form.hidden_field :current_step, :value => "who_you_are"
 =form.inputs(:class => "form-horizontal") do
   =form.input :first_name, :required => false, :input_html => {:placeholder => "e.g. John"}
