--- a/app/views/registrations/steps/_where_you_live.html.haml
+++ b/app/views/registrations/steps/_where_you_live.html.haml
@@ -1,3 +1,6 @@
+%p.mb-3
+  Next, we need to know where you live in
+  =neighbourhood
 =form.hidden_field :current_step, :value => "where_you_live"
 =form.inputs(:class => "form-horizontal") do
   =form.input :current_step, :as => :hidden, :value => "where_you_live"
