Add more copy to views

--- a/app/views/needs/_modal_post_form.html.haml
+++ b/app/views/needs/_modal_post_form.html.haml
@@ -9,4 +9,4 @@
   .modal-body
     =form.input :text, :input_html => {:class => "span6", :rows => 5}, :label => "Add a message", :required => false
   .modal-footer
-    =form.commit_button "Submit", :button_html => {:class => "btn-primary"}
+    =form.commit_button "Send", :button_html => {:class => "btn-primary"}
