Store search queries

--- a/app/views/needs/index.html.haml
+++ b/app/views/needs/index.html.haml
@@ -5,7 +5,7 @@
     %ul.help-list.unstyled
       -if @needs.empty?
         %li.list.list-result
-          Sorry, no results found
+          Sorry, no results found.
       -@needs.each do |need|
         %li.list.list-result
           .list-image
